Switch from styled-components to sass

--- a/components/container/Container.scss
+++ b/components/container/Container.scss
@@ -1,10 +1,10 @@
-import styled from 'styled-components';
+@import "../variables";
 
-export const Container = styled.div`
+.container {
   align-items: center;
   background-image: radial-gradient(#6bbce1 25%, #3ea2d0 80%);
   display: flex;
   flex-direction: column;
   height: 100vh;
   justify-content: center;
-`;
+}
