Display more info in modal

--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -1,6 +1,10 @@
 
 $border: 0.2rem solid lightgray;
 
+$color-blue: #80b0b9;
+$color-gray: #e5e5e5;
+$color-red: #b98080;
+
 $rotate: rotate 1s linear infinite;
 
 @keyframes rotate {
