--- a/components/text-token/TextToken.scss
+++ b/components/text-token/TextToken.scss
@@ -5,6 +5,7 @@
   border-radius: 0.25rem;
   color: white;
   display: inline-block;
+  overflow-wrap: anywhere;
   padding: 0.3rem 0.5rem;
 
   &--warning {
