Adding search button

--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -1,7 +1,8 @@
 
 $border: 0.2rem solid lightgray;
 
-$color-blue: #80b0b9;
+$color-blue-dark: #6bbce1;
+$color-blue-light: #3ea2d0;
 $color-gray: #e5e5e5;
 $color-red: #b98080;
 
