--- a/components/text-token/TextToken.scss
+++ b/components/text-token/TextToken.scss
@@ -1,7 +1,7 @@
 @import "../variables";
 
 .text-token {
-  background-color: $color-blue;
+  background-color: $color-blue-dark;
   border-radius: 0.25rem;
   color: white;
   display: inline-block;
