--- a/components/container/Container.scss
+++ b/components/container/Container.scss
@@ -2,7 +2,7 @@
 
 .container {
   align-items: center;
-  background-image: radial-gradient(#6bbce1 25%, #3ea2d0 80%);
+  background-image: radial-gradient($color-blue-dark 25%, $color-blue-light 80%);
   display: flex;
   flex-direction: column;
   height: 100vh;
