--- a/components/container/Container.scss
+++ b/components/container/Container.scss
@@ -5,6 +5,6 @@
   background-image: radial-gradient($color-blue-dark 25%, $color-blue-light 80%);
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100%;
   justify-content: center;
 }
