--- a/components/global.scss
+++ b/components/global.scss
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+html,
+body,
+#__next {
+  height: 100%;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
